--- a/templates/user/header.html
+++ b/templates/user/header.html
@@ -7,23 +7,17 @@
             <div class="ml-5">
                 <div class="navbar-nav">
                 <div class="ml-5">
-                    <a class="nav-item nav-link active" href="home">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link active" href="/homeUser">Home <span class="sr-only">(current)</span></a>
                 </div>
                 <div class="ml-5">
-                    <a class="nav-item nav-link" href="cash">Cash Payment<span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="/order_history">{{username}}</a>
                 </div>
                 <div class="ml-5">
-                    <a class="nav-item nav-link" href="additem">Add Item</a>
+                    <a class="nav-item nav-link" href="/homeUser/view_cart">Cart</a>
                 </div>
                 <div class="ml-5">
-                    <a class="nav-item nav-link" href="removeitem">Remove Item</a>
+                    <a class="nav-item nav-link" href="/user_logout">logout</a>
                 </div>
-                <div class="ml-5">
-                    <a class="nav-item nav-link" href="todaysmenu">Todays Menu</a>
-                </div>
-                <div class="ml-5"> 
-                    <a class="nav-item nav-link" href="canteen_logout">logout</a>
-                </div> 
             </div>
         </div>
         </div>     
