--- a/templates/canteen/removeitem.html
+++ b/templates/canteen/removeitem.html
@@ -62,7 +62,7 @@
     <title>home</title>
   </head>
 {% include 'canteen/header.html' %}
-<table class="content-table">
+<table class="content-table table table-bordered">
   <thead>
     <tr>
       <th>ItemName</th>
