--- a/templates/canteen/home.html
+++ b/templates/canteen/home.html
@@ -62,7 +62,7 @@
     <title>home</title>
   </head>
 {% include 'canteen/header.html' %}
-<table class="content-table table table-bordered">
+<table class="content-table tavle table-bordered">
   <thead>
     <tr>
       <th>orderID</th>
