--- a/templates/user/store.html
+++ b/templates/user/store.html
@@ -24,8 +24,8 @@
     {% include 'user/header.html' %}            
 <!--            <h1 class="band-name band-name-large">The Generics</h1>-->
     </header>
-    Last Order Placed id={{currenorder_id}} <br>
-    Last Order Delivered id={{previousorder_id}}
+    <div class="col-md-12 d-inline p-2 bg-danger text-white">Last Order Delivered id={{previousorder_id}}</div>
+    <div class="col-md-12 d-inline p-2 bg-danger text-white">Last Order Placed id={{currenorder_id}}</div> <br>
         <section class="container content-section">
             <h2 class="section-header">China Towns</h2>
             <div class="shop-items">
