--- a/templates/user/paypal.html
+++ b/templates/user/paypal.html
@@ -3,7 +3,7 @@
     <div id="paypal-button-container"></div>
 
     <!-- Include the PayPal JavaScript SDK -->
-    <script src="https://www.paypal.com/sdk/js?client-id=AdiVV2D6Ea4i-gvyJHK7jN6duHGSaUZE1yOalzty3pkmAY-Y1li0yIYEPEpJh271DrE_T9bRXIeurYpG&currency=USD"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=SecuredID=USD"></script>
 
     <script>
         // Render the PayPal button into #paypal-button-container
